[gd_scene load_steps=3 format=3 uid="uid://color_picker_ui"]

[ext_resource type="Script" path="res://src/ui/color_picker_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.12, 0.16, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.55, 0.75, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ColorPickerUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 18
text = "ðŸŽ¨ Color Picker"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âœ•"
tooltip_text = "Close panel"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorPreview" type="ColorRect" parent="MarginContainer/VBoxContainer" unique_name_in_owner=true]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
color = Color(0.42, 0.65, 0.95, 1)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_name_in_owner=true]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.78, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = ""
horizontal_alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 1

[node name="HexLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "#FFFFFF"
horizontal_alignment = 1

[node name="CopyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_name_in_owner=true]
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
text = "Copy Hex"

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/VBoxContainer" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(520, 360)

